--- a/index.html
+++ b/index.html
@@ -1,5 +1,50 @@
 <html>
+  <head>
+      <link rel="stylesheet" type="text/css" href="stylesheets/index-stylesheets.css">
+      <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+      <title>Sarah Ing's Website</title>
+  </head>
   <body>
-    Hello DBC!
+     <div class="header">
+        <p>Sarah Ing<br>
+        Dev Bootcamp</p>
+      </div>
+      <div class="navigation">
+       <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    <div class="about">
+        <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/005/082/008/3da1466.jpg"/>
+        <h3>About Me</h3>
+        <p>Hello! I am a part of the 2015 Chicago cohort for DBC. I an an enthusastic web-developer-to-be. Feel free to check out what I've been working on!</p>
+    </div>
+
+    <div class="suggestion">
+      <ul>Suggestions:
+        <li>go here</li>
+        <li>or here</li>
+      </ul>
+    </div>
+
+    <div class="footer">
+        <ul>
+          <li><a href="https://twitter.com/Sarah_Ing" class="twitter-follow-button" data-show-count="false">Follow @Sarah_Ing</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></a>
+          </li>
+           <li>
+            <a class="github-button" href="https://github.com/sarahikeda" data-style="mega">Follow @sarahikeda</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/pub/sarah-ing/a1/978/aa6">Linkedin</a>
+          </li>
+
+
+        </ul>
+    </div>
+    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
