--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
      <div class="header">
         <p>Sarah Ing<br>
-        Dev Bootcamp</p>
+        Dev Bootcamp Chicago</p>
       </div>
       <div class="navigation">
        <ul>
