add blog link to index

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
     <div class="suggestion">
       <ul>Suggestions:
-        <li><a href="http://sarahikeda.github.io/blog/blog-index.html"Blog</a></li>
-        <li>or here</li>
+        <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
       </ul>
     </div>
 
