add e-mail me link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="suggestion">
       <ul>Suggestions:
         <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
+        <li><a href="mailto:sarahikeda@gmail.com?Subject=Hi%There" target="_top">E-mail Me</a></li>
       </ul>
     </div>
 
