--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
 
     <div class="footer">
         <ul>
-          <li><a href="https://twitter.com/Sarah_Ing" class="twitter-follow-button" data-show-count="false">Follow @Sarah_Ing</a>
-              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></a>
-          </li>
-           <li>
+          <li id="linkedin"><a href="https://twitter.com/Sarah_Ing"><img src="imgs/twitter.png"/></a>
+           </li>
+           <li id="linked in">
             <a class="github-button" href="https://github.com/sarahikeda" data-style="mega">Follow @sarahikeda</a>
           </li>
-          <li>
-            <a href="https://www.linkedin.com/pub/sarah-ing/a1/978/aa6">Linkedin</a>
+          <li id="linkedin">
+            <a href="https://www.linkedin.com/pub/sarah-ing/a1/978/aa6"><img src="imgs/linkedin.png"/></a>
           </li>
 
 
