--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </ul>
       </div>
     <div class="about">
-        <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/005/082/008/3da1466.jpg"/>
+        <img src="imgs/edited.jpg"/>
         <h3>About Me</h3>
-        <p>Hello! I am a part of the 2015 Chicago cohort for DBC. I am an enthusastic web-developer-to-be. Feel free to check out what I've been working on!</p>
+        <p>Hello! I am a part of the 2015 Dev Bootcamp cohort in Chicago. I am an enthusastic web-developer-to-be. Feel free to check out what I've been working on!</p>
     </div>
 
     <div class="suggestion">
