--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
       <link rel="stylesheet" type="text/css" href="stylesheets/index-stylesheets.css">
       <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
       <title>Sarah Ing's Website</title>
   </head>
   <body>
