--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       </div>
     <div class="about">
         <img src="imgs/edited.jpg"/>
-        <h3>About Me</h3>
-        <p>Hello! I am a part of the 2015 Dev Bootcamp cohort in Chicago. I am an enthusastic web-developer-to-be. Feel free to check out what I've been working on!</p>
+        <p><strong>About Me</strong></br>Hello! I am a part of the 2015 Dev Bootcamp cohort in Chicago. I am an enthusiastic web-developer-to-be. Feel free to check out what I've been working on!</p>
     </div>
 
     <div class="suggestion">
