--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   <body>
      <div class="header">
         <p>Sarah Ing<br>
-        Dev Bootcamp Chicago</p>
+        Dev Bootcamp</p>
       </div>
       <div class="navigation">
-       <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+         <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
       </div>
-    <div class="about">
+      <div class="about">
         <img src="imgs/edited.jpg"/>
         <p><strong>About Me</strong></br>Hello! I am a part of the 2015 Dev Bootcamp cohort in Chicago. I am an enthusiastic web-developer-to-be. Feel free to check out what I've been working on!</p>
-    </div>
+      </div>
 
-    <div class="suggestion">
-      <ul>Suggestions:
-        <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
-        <li><a href="mailto:sarahikeda@gmail.com?Subject=Hi%There" target="_top">E-mail Me</a></li>
-      </ul>
-    </div>
+      <div class="suggestion">
+        <ul>Suggestions:
+          <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
+          <li><a href="mailto:sarahikeda@gmail.com?Subject=Hi%There" target="_top">E-mail Me</a></li>
+        </ul>
+      </div>
 
     <div class="footer">
         <ul>
