change icons and suggestions div

--- a/overhaul.html
+++ b/overhaul.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <link rel="stylesheet" type="text/css" href="stylesheets/index-stylesheets.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/overhaul-index-stylesheets.css">
       <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
       <title>Sarah Ing's Website</title>
@@ -25,23 +25,21 @@
 
       <div class="suggestion">
         <ul>Recent Blog Posts:
-           <li><a href="http://sarahikeda.github.io/blog/t1-git-blog.html">Technical Blog: Git Ready</a></li>
-            <li><a href="http://sarahikeda.github.io/blog/c1-chefs-kitchen.html">Cultural Blog: Fireside Chat</a></li>
-        </ul>
-      </div>
-
-    <div class="footer">
-        <ul>
-           <li id="linkedin">
+          <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
+          <li id="linkedin"><a href="https://twitter.com/Sarah_Ing"><img src="imgs/twitter.png"/></a>
+           </li>
+          <li id="linkedin">
             <a href="https://www.linkedin.com/pub/sarah-ing/a1/978/aa6"><img src="imgs/linkedin.png"/></a>
           </li>
-          <li id="linkedin">
-            <a href="https://twitter.com/Sarah_Ing"><img src="imgs/twitter.png"/></a>
-          </li>
-          <li id="linkedin">
+            <li id="linked in">
             <a href="https://github.com/sarahikeda"><img src="imgs/github.png"/></a>
           </li>
         </ul>
+      </div>
+      <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+    <div class="footer">
+
     </div>
+
   </body>
 </html>
