add projects page

--- a/projects.html
+++ b/projects.html
@@ -13,15 +13,14 @@
       <div class="navigation">
          <ul>
             <li><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
-            <li><a href="http://sarahikeda.github.io/projects.html">Projects</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
-            <li><a href="http://sarahikeda.github.io/about.html">About</a></li>
+            <li><a href="#">About</a></li>
           </ul>
       </div>
       <div class="about">
         <img src="imgs/edited.jpg"/>
-        <p><strong>About Me</strong></br>Hello! I am a part of the 2015 Dev Bootcamp cohort in Chicago. I am an enthusiastic web-developer-to-be. Feel free to check out what I've been working on!</p>
-      </div>
+        <p><strong>Coming soon!</strong></br>
 
       <div class="suggestion">
         <ul>Recent Blog Posts:
