update nav links w working url

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       </div>
       <div class="about">
         <img src="imgs/edited.jpg"/>
-        <p><strong>Who I am</strong></br>Soon-to-be Developer * Dreamer * Traveler</p>
+        <p><strong>Who I Am</strong></br><br>Soon-to-be Developer *    Dreamer *    Traveler</p>
       </div>
 
       <div class="suggestion">
