--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,9 @@
       <div class="navigation">
          <ul>
             <li><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="http://sarahikeda.github.io/projects.html">Projects</a></li>
             <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="http://sarahikeda.github.io/about.html">About</a></li>
           </ul>
       </div>
       <div class="about">
