update index w cheatsheet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <ul>Recent Blog Posts:
            <li><a href="http://sarahikeda.github.io/blog/t1-git-blog.html">Technical Blog: Git Ready</a></li>
             <li><a href="http://sarahikeda.github.io/blog/c1-chefs-kitchen.html">Cultural Blog: Fireside Chat</a></li>
+            <li><a href="http://sarahikeda.github.io/cheat-sheet.html">JavaScript vs Ruby Cheatsheet</a></li>
         </ul>
       </div>
 
