edit text and nav bar

--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
   <head>
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
-      <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-      <title>Sarah Ing's Website</title>
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+      <title>Sarah Ing</title>
   </head>
   <body>
-     <div class="header">
-        <p>Sarah Ing<br>
-      </div>
-      <!-- <div class="navigation">
-         <ul>
-            <li><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-      </div> -->
-
-      <div class="jumbotron">
-        <p>I am a writer turned web developer. I spent a bulk of my career writing about other people doing things and realised I wanted to be the one who was creating. I attended Dev Bootcamp to accomplish this, learning new skill sets that have enabled me to build my own visions.</p>
-
-<p>I've had the fortune of traveling to many countries and this has instilled a great appreciation for other cultures. As a developer, this appreciation has and will continue to shape my drive to create something meaningful, which connects people and communities.
-</p>
+    <div class = "header">
+      <p id="name"> Sarah Ing</p>
+      <ul id="navright">
+          <li><a href="sarahing.png" target="_blank">Resume</a></li>
+          <li><a href="#">Projects</a></li>
+        </ul>
       </div>
 
 
+
+           <!--  <li><a href="http://sarahikeda.github.io/blog/blog-index.html">Blog</a></li> -->
+
+
+      <div class="bio">
+         <img id="biopic" src="imagebio.jpg" alt="Picture of Sarah">
+        <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one who was <span style="font-weight: bold">creating</span>. I attended Dev Bootcamp to accomplish this, learning new skill sets that have enabled me to build my own visions.</p>
+
+        <p>
+      </div>
+
+      <div class="interests">
+        <ul>Interests
+          <li>Baking and consuming pies</li>
+          <li>Storytelling</li>
+          <li>Scuba Diving</li>
+        </ul>
+      </div>
+      <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.2.3/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
