--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
+     <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+       <script src="stylesheets/javascripts/wordcloud.js" type="text/javascript"></script>
+    <script type="text/javascript" src="stylesheets/javascripts/smooth-scroll.js"></script>
       <title>Sarah Ing</title>
   </head>
   <body>
@@ -14,6 +17,7 @@
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
           <span class="glyphicon glyphicon-envelope" aria-hidden="true">
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
+           <li><a href="#interests" class="smoothScroll">Interests</a></li>
         </ul>
       </div>
       <div class="row">
@@ -28,17 +32,20 @@
           <img id="insession" src="insession.png" alt="Picture of Project">
         </div>
       </div>
-      <div class="row">
-        <div class="interests">
-          <ul>Interests
-            <li>Baking and consuming pies</li>
-            <li>Storytelling</li>
-            <li>Scuba Diving</li>
-          </ul>
-        </div>
+      <div class="break">
       </div>
+      <div class="row">
+
+
+  <div id = "interests">
+    <p class="grow">Storytelling</p>
+    <p class="grow_one">Scuba Diving</p>
+
+    <p class="grow_two">The more that you learn,</p>
+    <p class = "grow_three">the more places you'll go.</p>
+ </div>
+  </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script type="text/javascript" src="stylesheets/javascripts/smooth-scroll.js"></script>
+
   </body>
 </html>
