--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
      <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
        <script src="stylesheets/javascripts/wordcloud.js" type="text/javascript"></script>
@@ -15,9 +16,8 @@
         <p id="name"> Sarah Ing</p>
         <ul id="navright">
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
-          <span class="glyphicon glyphicon-envelope" aria-hidden="true">
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
-           <li><a href="#interests" class="smoothScroll">Interests</a></li>
+           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
       </div>
       <div class="row">
@@ -26,8 +26,11 @@
           <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one who was <span style="font-weight: bold">creating</span>. I attended Dev Bootcamp to accomplish this, learning new skill sets that have enabled me to build my own visions.</p>
         </div>
       </div>
+      <div class="break">
+      </div>
       <div class="row">
         <div id = "projects">
+          <h3>Projects</h3>
           <p>Learning a new subject online can be an exciting journey, but you shouldn't have to do it alone. Our app tackles this problem by bringing students from sites like Khan Academy together based on location. Students can find meet-ups for courses near their location, chat with other peers and seek help in the forum. InSession was built with Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
           <img id="insession" src="insession.png" alt="Picture of Project">
         </div>
@@ -35,7 +38,7 @@
       <div class="break">
       </div>
       <div class="row">
-
+<!--
 
   <div id = "interests">
     <p class="grow">Storytelling</p>
@@ -43,7 +46,45 @@
 
     <p class="grow_two">The more that you learn,</p>
     <p class = "grow_three">the more places you'll go.</p>
- </div>
+ </div> -->
+
+ <div class="row">
+    <div id="contact">
+        <div class="col-md-6">
+                <form class="form-horizontal" action="mailto:sarahikeda@gmail.com" method="post">
+                    <fieldset>
+                        <legend class="text-center header">Reach Out</legend>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                            <div class="col-md-8">
+                                <input id="fname" name="name" type="text" placeholder="Name" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                            <div class="col-md-8">
+                                <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
+                            <div class="col-md-8">
+                                <textarea class="form-control" id="message" name="message" placeholder="Message here." rows="4"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+              </div>
+        </div>
+    </div>
   </div>
     </div>
 
