change to bio text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
      <meta charset="utf-8">
+
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-       <script src="stylesheets/javascripts/wordcloud.js" type="text/javascript"></script>
+
     <script type="text/javascript" src="stylesheets/javascripts/smooth-scroll.js"></script>
       <title>Sarah Ing</title>
   </head>
@@ -23,7 +24,7 @@
       <div class="row">
         <div class="bio">
            <img id="biopic" src="imagebio.jpg" alt="Picture of Sarah">
-          <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one who was <span style="font-weight: bold">creating</span>. I attended Dev Bootcamp to accomplish this, learning new skill sets that have enabled me to build my own visions.</p>
+          <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one <span style="font-weight: bold">creating</span>. So, I learned how to <span style="font-weight: bold">code</span>.</p>
         </div>
       </div>
       <div class="break">
@@ -50,38 +51,11 @@
 
  <div class="row">
     <div id="contact">
-        <div class="col-md-6">
-                <form class="form-horizontal" action="mailto:sarahikeda@gmail.com" method="post">
-                    <fieldset>
-                        <legend class="text-center header">Reach Out</legend>
+      <i class="fa fa-camera-retro fa-5x"></i> fa-5x
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="fname" name="name" type="text" placeholder="Name" class="form-control">
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <textarea class="form-control" id="message" name="message" placeholder="Message here." rows="4"></textarea>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-md-12 text-center">
-                                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+                <!-- <form class="form-horizontal" action="mailto:sarahikeda@gmail.com" method="post">
+ -->
               </div>
         </div>
     </div>
