working font awesome icon for mail

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
      <meta charset="utf-8">
 
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
         <ul id="navright">
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
-           <li><a href="#contact" class="smoothScroll">Contact</a></li>
+           <li><a href="#blog" class="smoothScroll">Blog</a></li>
         </ul>
       </div>
       <div class="row">
@@ -32,34 +32,17 @@
       <div class="row">
         <div id = "projects">
           <h3>Projects</h3>
-          <p>Learning a new subject online can be an exciting journey, but you shouldn't have to do it alone. Our app tackles this problem by bringing students from sites like Khan Academy together based on location. Students can find meet-ups for courses near their location, chat with other peers and seek help in the forum. InSession was built with Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
+          <p>InSession is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
           <img id="insession" src="insession.png" alt="Picture of Project">
         </div>
       </div>
-      <div class="break">
-      </div>
-      <div class="row">
-<!--
-
-  <div id = "interests">
-    <p class="grow">Storytelling</p>
-    <p class="grow_one">Scuba Diving</p>
-
-    <p class="grow_two">The more that you learn,</p>
-    <p class = "grow_three">the more places you'll go.</p>
- </div> -->
-
+ <div class="break"></div>
  <div class="row">
     <div id="contact">
-      <i class="fa fa-camera-retro fa-5x"></i> fa-5x
-
-
-                <!-- <form class="form-horizontal" action="mailto:sarahikeda@gmail.com" method="post">
- -->
-              </div>
-        </div>
+      <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
     </div>
-  </div>
+</div>
+
     </div>
 
   </body>
