add link to header name for home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="page-header">
-        <p id="name"> Sarah Ing</p>
+        <p id="name"><a href="http://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul id="navright">
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
