--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-
-    <script type="text/javascript" src="stylesheets/javascripts/smooth-scroll.js"></script>
       <title>Sarah Ing</title>
   </head>
   <body>
@@ -27,8 +25,7 @@
           <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one <span style="font-weight: bold">creating</span>. So, I learned how to <span style="font-weight: bold">code</span>.</p>
         </div>
       </div>
-      <div class="break">
-      </div>
+      <div class="break"></div>
       <div class="row">
         <div id = "projects">
           <h3>Projects</h3>
@@ -36,14 +33,21 @@
           <img id="insession" src="insession.png" alt="Picture of Project">
         </div>
       </div>
- <div class="break"></div>
- <div class="row">
-    <div id="contact">
-      <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
+      <div class="break"></div>
+      <div class="row">
+        <div id="blog">
+          <h3>Blog</h3>
+          <ul>
+            <li><a href="blog/startjourney.html">Start of My DBC Journey</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="break"></div>
+      <div class="row">
+        <div id="contact">
+          <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
+        </div>
+      </div>
     </div>
-</div>
-
-    </div>
-
   </body>
 </html>
