add second blog entry

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <h3>Blog</h3>
           <ul>
             <li><a href="blog/startjourney.html">Start of My DBC Journey</a></li>
+             <li><a href="blog/pairprogramming.html">Pair Programming</a></li>
           </ul>
         </div>
       </div>
@@ -48,6 +49,7 @@
           <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
         </div>
       </div>
+
     </div>
   </body>
 </html>
