link to javascript vs ruby

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <ul>
             <li><a href="blog/startjourney.html">Start of My DBC Journey</a></li>
              <li><a href="blog/pairprogramming.html">Pair Programming</a></li>
+             <li><a href="http://jessiewuwu.github.io/blog/cheatsheet.html">JavaScript vs Ruby</a></li>
           </ul>
         </div>
       </div>
