--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
            <li><a href="#blog" class="smoothScroll">Blog</a></li>
+          <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
       </div>
       <div class="row">
@@ -47,6 +48,7 @@
       <div class="break"></div>
       <div class="row">
         <div id="contact">
+          <h3>Reach out!</h3>
           <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
         </div>
       </div>
