--- a/carolyn.html
+++ b/carolyn.html
@@ -2,7 +2,7 @@
   <head>
      <meta charset="utf-8">
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="index.css">
+      <link rel="stylesheet" type="text/css" href="cindex.css">
       <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
       <title>Carolyn Bonoff</title>
   </head>
