--- a/carolyn.html
+++ b/carolyn.html
@@ -3,16 +3,16 @@
      <meta charset="utf-8">
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="cindex.css">
-      <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <title>Carolyn Bonoff</title>
   </head>
   <body>
     <div class="carolyn-heading">
       <div class = "name">
-        <p>Carolyn Bonoff:</p>
+        <p>Carolyn Bonoff</p>
       </div>
       <div class = "subtitle">
-        <p>A Woman of Mystery</p>
+        <p>Content Analyst</p>
       </div>
     </div>
     <div class = "contact">
