--- a/index.html
+++ b/index.html
@@ -25,17 +25,32 @@
           <p>I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one <span style="font-weight: bold">creating</span>. So, I learned how to <span style="font-weight: bold">code</span>.</p>
         </div>
       </div>
+      <div class="inspire">
+        <h3>What Inspires Me:</h3>
+          <li>Empowerment! With a focus on social justice.</li>
+          <li>Resourcefulness & accessibility.</li>
+          <li>Silliness.</li>
+          <li>Sentiment analysis (natural language processing). How do we teach computers to understand us and essentially, to be <b>human?</b></li>
+          <li>A devastatingly good slice of pie. <b>Any pie.</b></li>
+          <li><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a></li>
+          <li>Awkwardness. What are the moments that aren't formulaic?</li>
+      </div>
       <div class="break"></div>
-      <div class="row">
-        <h3 id ="projects">Projects</h3>
-        <div class = "projects-one">
-          <p>InSession is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
-          <img class="insession" src="insession.png" alt="Picture of Project">
+        <h3 id="projects">Projects</h3>
+        <div class="projects-one">
+          <a href="oneus/index.html"><img class="oneus" src="oneus.jpeg" alt="OneUs app"></a>
+          <p><b>OneUs</b> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
         </div>
-         <div class = "projects-two">
-          <p>Bring Chips is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.</p><br>
-          <img class="potluck" = src="potluck.png" alt="Picture of Potluck Project">
-        </div>
+
+        <div class="row">
+          <div class= "projects-two col-md-6">
+            <p><b>InSession</b> is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
+            <img class="insession" src="insession.png" alt="Picture of Project">
+          </div>
+           <div class= "projects-three col-md-6">
+            <p><b>Bring Chips</b> is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.</p><br>
+            <img class="potluck" = src="potluck.png" alt="Picture of Potluck Project">
+          </div>
       </div>
       <div class="break"></div>
       <div class="row">
@@ -51,7 +66,7 @@
       <div class="break"></div>
       <div class="row">
         <div class="contact">
-          <h3>Reach out!</h3>
+          <h3>Reach out.</h3>
           <a href="mailto:sarahikeda@gmail.com"><i class="fa fa-envelope fa-5x"> </i>
         </div>
       </div>
