--- a/oneus/index.html
+++ b/oneus/index.html
@@ -14,7 +14,7 @@
         <p class="name"><a href="http://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul id="navright">
           <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="../index.html">About Me</a></li>
         </ul>
       </div>
       <img class="logo" src="oneus.jpg" alt="oneus">
