--- a/oneus/index.html
+++ b/oneus/index.html
@@ -13,7 +13,7 @@
       <div class="page-header">
         <p class="name"><a href="http://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul id="navright">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="inspiration.html">Inspiration</a></li>
           <li><a href="../index.html">About Me</a></li>
         </ul>
       </div>
@@ -50,6 +50,8 @@
       </div>
 
     </div>
+    <div class="break"></div>
+    <div id="find-more"><a href="inspiration.html"><b>Learn more.</b></a></div>
     <div class="break"></div>
   </div>
 
