--- a/oneus/inspiration.html
+++ b/oneus/inspiration.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="page-header">
-        <p class="name"><a href="http://sarahikeda.github.io"> Sarah Ing</a></p>
+        <p class="name"><a href="../index.html"> Sarah Ing</a></p>
         <ul id="navright">
           <li><a href="index.html">Home</a></li>
           <li><a href="../index.html">About Me</a></li>
