Fix contact link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="sarahing.png" target="_blank">Resume</a></li>
           <li><a href="#projects" class="smoothScroll">Projects</a></li>
            <li><a href="#blog" class="smoothScroll">Blog</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+          <li><a href="mailto:sarahikeda@gmail.com">Contact</a></li>
         </ul>
       </div>
       <div class="row">
