--- a/oneus/index.html
+++ b/oneus/index.html
@@ -53,6 +53,8 @@
     <div class="break"></div>
     <div id="find-more"><a href="inspiration.html"><b>Learn more.</b></a></div>
     <div class="break"></div>
+    <p class="made">Made with love by <a href="mailto:sarahikeda@gmail.com">Sarah Ing</a></p>
+    <div class="break"></div>
   </div>
 
   </body>
