--- a/oneus/inspiration.html
+++ b/oneus/inspiration.html
@@ -36,5 +36,7 @@
         <p>After being guided through the narratives, the user is given options to reach out and create connection. Rather than a tangible approach with a donation of objects, a user is asked to donate "needs." They are given the opportunity to invite a refugee into their home to share a meal (physiological need), attend a faciliated conversation (understanding, belonging) or invite someone to stay with them (shelter).</p>
       </div>
       <div class="break"></div>
+      <p class="made">Made with love by <a href="mailto:sarahikeda@gmail.com">Sarah Ing</a></p>
+      <div class="break"></div>
   </body>
 </html>
