--- a/oneus/inspiration.html
+++ b/oneus/inspiration.html
@@ -27,16 +27,16 @@
       <div class="explanation">
         <p>So much of the burden of societal integration is put on refugees. I want to shift the onus of refugee integration onto the people who are already assimilated.</p>
 
-        <p>To make this effective, I feel that people need to empathize with what refugees are going through. By putting themselves in the shoes of others, they are able to better relate to others and foster connection.</p>
+        <p>To make this effective, I feel that people need to empathize with what refugees are going through. By putting themselves in the shoes of others, people are able to better relate to others and foster connection.</p>
 
-        <p>My approach to building empathy stems from Maslow's Hierarchy of Needs. Some of the very basic of needs are taken away from reugees -- shelter, security, stability. How do you make someone else feel this void?</p>
+        <p>My approach to building empathy stems from Maslow's Hierarchy of Needs. Some of the very basic of needs are taken away from refugees -- shelter, security, stability. How do you make someone else feel this void?</p>
 
         <p>With OneUs, the user can listen to real narratives from refugees who have recently migrated. The user is walked through scenarios in which he or she can feel what it's like to be stripped away of basic needs. I was drawn to the meditative simplicity of this emulation because I think it's important to stop and reflect, rather than the default of constant action.</p>
 
         <p>After being guided through the narratives, the user is given options to reach out and create connection. Rather than a tangible approach with a donation of objects, a user is asked to donate "needs." They are given the opportunity to invite a refugee into their home to share a meal (physiological need), attend a faciliated conversation (understanding, belonging) or invite someone to stay with them (shelter).</p>
       </div>
       <div class="break"></div>
-      <p class="made">Made with love by <a href="mailto:sarahikeda@gmail.com">Sarah Ing</a></p>
+      <p class="made">Envisioned by <a href="mailto:sarahikeda@gmail.com">Sarah Ing</a></p>
       <div class="break"></div>
   </body>
 </html>
