Remove bold styling of the word human and remove a break

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <h3>What Inspires Me:</h3>
           <li>Empowerment! With a focus on social justice.</li>
           <li>Accessibility.</li>
-          <li>Sentiment analysis (natural language processing). How do we teach computers to understand us and essentially, to be <b>human?</b></li>
+          <li>Sentiment analysis (natural language processing). How do we teach computers to understand us and essentially, to be human?</li>
           <li><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a></li>
           <li>Awkwardness. What are the moments that aren't formulaic?</li>
       </div>
-      <div class="break"></div>
       <div class="projects">
         <h3 id="projects">Projects</h3>
         <div class="projects-one">
@@ -50,6 +49,7 @@
           <p><b>OneUs</b> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
           </div>
       </div>
+      <div class="break"></div>
     </div>
   </body>
 </html>
