Add Halloween picture

--- a/index.html
+++ b/index.html
@@ -22,28 +22,30 @@
       </div>
       <div class="main-info">
         <div class="bio">
-          <img id="biopic" src="imagebio.jpg" alt="Picture of Sarah">
+          <img id="biopic" src="images/imagebio.jpg" alt="Picture of Sarah">
           <p id="biotext">I am a writer turned <span style="font-weight: bold">web developer</span>. I spent a bulk of my career writing about other people doing things but realized something was missing -- I wanted to be the one <span style="font-weight: bold">creating</span>. So, I learned how to <a href="https://github.com/sarahikeda"span style="font-weight: bold">code</span></a>.</p>
         </div>
         <div class="inspire">
           <h3>What Inspires Me:</h3>
             <li>Empowerment.</li>
+            <li>Testing. (Bring it on, TDD)</li>
             <li>Accessibility.</li>
             <li>Sentiment analysis (natural language processing). How do we teach computers to understand us and essentially, be human?</li>
             <li><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a></li>
-            <li>Awkwardness. What are the moments that aren't formulaic?</li>
+            <li>Bright wigs for Halloween.</li>
+            <img id="halloween" src="images/halloween.jpg" alt="Picture of Sarah">
         </div>
       </div>
       <div class="projects">
         <div class="projects-one">
             <p><a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a> is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.</p><br>
-            <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" = src="potluck.png" alt="Picture of Potluck Project"></a>
+            <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" = src="images/potluck.png" alt="Picture of Potluck Project"></a>
         </div>
         <div class="break"></div>
         <div class="row">
           <div class= "projects-two col-md-6">
             <p><a href="https://github.com/sarahikeda/InSession"><b>InSession</b></a> is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
-            <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="insession.png" alt="Picture of Project"></a>
+            <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
           </div>
            <div class= "projects-three col-md-6">
           <p><b>OneUs</b> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
