--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <html>
   <head>
      <meta charset="utf-8">
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <title>Sarah Ing</title>
   </head>
   <body>
     <div class="container">
       <div class="page-header">
-        <p class="name"><a href="http://sarahikeda.github.io"> Sarah Ing</a></p>
+        <p class="name"><a href="https://sarahikeda.github.io"> Sarah Ing</a></p>
         <ul class="navright">
           <li id="about"><a href="#about">About Me</a></li>
           <li id="projects"><a href="#projects">Projects</a></li>
