Add link for oneus project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
           </div>
            <div class= "projects-three col-md-6">
-          <p><b>OneUs</b> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
+          <p><a href="http://sarahikeda.github.io/oneus/"><b>OneUs</b></a> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
           </div>
       </div>
       <div class="break"></div>
