Add external js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+      <script type="text/javascript" src="stylesheets/index.js" ></script>
       <title>Sarah Ing</title>
   </head>
   <body>
@@ -54,18 +55,3 @@
     </div>
   </body>
 </html>
-
-<script>
-  $('.inspire').hide();
-  $('.projects').hide();
-  $('#about').click(function(){
-    $('.bio').hide();
-    $('.projects').hide();
-    $('.inspire').show();
-  });
-  $('#projects').click(function(){
-    $('.bio').hide();
-    $('.inspire').hide();
-    $('.projects').show();
-  });
-</script>
