--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
         </div>
       </div>
       <div class="projects">
-        <div class="projects-one">
+        <div class="projects-left">
             <p><a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a> is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.</p><br>
             <a href="https://github.com/sarahikeda/bringchips"><img class="potluck" = src="images/potluck.png" alt="Picture of Potluck Project"></a>
         </div>
-        <div class="break"></div>
-        <div class="row">
-          <div class= "projects-two col-md-6">
+          <div class= "projects-right col-md-6">
             <p><a href="https://github.com/sarahikeda/InSession"><b>InSession</b></a> is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript.</p>
             <a href="https://github.com/sarahikeda/InSession"><img class="insession" src="images/insession.png" alt="Picture of Project"></a>
           </div>
-           <div class= "projects-three col-md-6">
+          <div class="big-break"></div>
+          <div class= "projects-left col-md-6">
           <p><a href="http://sarahikeda.github.io/oneus/"><b>OneUs</b></a> is an app created in support of refugee integration worldwide. In an attempt to ease the process for people fleeing persecution, the onus is shifted to the people who are already well-acclimated to the community, who can then donate needs (inspired by Maslow's Hierarchy of Needs).</p>
           </div>
-      </div>
+          <div class= "projects-right col-md-6">
+         <p><a href="http://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions.</b></a> Having trouble figuring out what to do today? We make the decision based on your mood and energy level. </p>
+         </div>
       <div class="break"></div>
     </div>
   </body>
